--- a/DC-Comics/src/app/components/card/card.component.html
+++ b/DC-Comics/src/app/components/card/card.component.html
@@ -1,1 +1,34 @@
-<p>card works!</p>
+<ng-container *ngIf="!dataError; then success; else errorApi"></ng-container>
+<ng-template #success>
+    <div class="row">
+        <div class="col-md-5">
+            <div class="card">
+                <img [src]="dataSuccess.img" class="img-fluid">
+            </div>
+        </div>
+        <div class="col-md-7">
+            <div class="card  w-100">
+                <div class="card-body">
+                    <h5 class="card-title">{{dataSuccess.nombre | uppercase}}</h5>
+                    <p class="card-text">
+                        {{ dataSuccess.bio}}
+                    </p>
+                    <p class="card-text"><small class="text-muted">
+                            Last updated 3 mins ago
+                        </small></p>
+                    <a class="btn btn-outline-primary btn-block" [routerLink]="[ '/heroes' ]">
+                        Regresar
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
+<ng-template #errorApi>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>Error : </strong> {{dataError.msg}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+</ng-template>
