--- a/DC-Comics/src/app/components/header/header.component.html
+++ b/DC-Comics/src/app/components/header/header.component.html
@@ -18,9 +18,14 @@
         <a class="nav-link " [routerLink]="['about']" tabindex="-1">about</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <div class="form-inline my-2 my-lg-0" >
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" 
+      (keyup.enter)="searchHero($event.target.value)"
+      #inputValue
+      >
+      <button class="btn btn-outline-success my-2 my-sm-0"
+      (click)="searchHero(inputValue.value)"
+      >Search</button>
+    </div>
   </div>
 </nav>
