--- a/pipes/src/app/app.component.html
+++ b/pipes/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1>Pipes</h1>
+  <h1>{{title | titlecase}}</h1>
   <table class="table w-100 mt-3">
     <thead class="thead-dark">
       <tr>
@@ -11,14 +11,14 @@
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
+        <th scope="row">myPromise</th>
+        <td>async</td>
+        <td>{{myPromise | async}}</td>
       </tr>
       <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
+        <th scope="row">{{name}}</th>
+        <td>capitalizado</td>
+        <td>{{name | capitalizado:1:2:3}}</td>
       </tr>
       <tr>
         <th scope="row">3</th>
