--- a/spoti-app/src/app/components/card/card.component.html
+++ b/spoti-app/src/app/components/card/card.component.html
@@ -1,1 +1,11 @@
-<p>card works!</p>
+<div class="card">
+    <img [src]="song.images[0].url" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">{{ song.name }}</h5>
+      <span class="badge badge-primary" 
+        *ngFor="let artist of song.artists"
+      >
+      {{ artist.name }}
+      </span>
+    </div>
+  </div>
