--- a/spoti-app/src/app/components/home/home.component.html
+++ b/spoti-app/src/app/components/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="card-columns">
+  <app-card
+    *ngFor="let song of songs"
+    [song] = "song"
+  ></app-card>
+</div>
