--- a/crud1/src/app/app.component.html
+++ b/crud1/src/app/app.component.html
@@ -4,10 +4,10 @@
   </a>
 </nav>
 
-<div class="container">
+<div class="container" *ngIf="!loading">
   <div class="row">
     <div class="col-md-8 mt-4">
-      <app-list></app-list>
+      <app-list [listUsers]="listUsers"></app-list>
       <app-insert></app-insert>
     </div>
     <div class="col-md-4">
