--- a/crud1/src/app/components/insert/insert.component.html
+++ b/crud1/src/app/components/insert/insert.component.html
@@ -1,6 +1,14 @@
 <div class="card mt-4">
     <div class="card-body">
         <div class="card-title">
+            <h3>{{selectedEmployee.id===0 ? "Insert A New Employee" : "Update An Employee"}}</h3>
         </div>
+        <div class="form-group">
+        </div>
+        <div class="form-group">
+        </div>
+        <button>
+        Submit
+        </button>
     </div>
 </div>
