--- a/crud1/src/app/components/insert/insert.component.html
+++ b/crud1/src/app/components/insert/insert.component.html
@@ -4,11 +4,16 @@
             <h3>{{selectedEmployee.id===0 ? "Insert A New Employee" : "Update An Employee"}}</h3>
         </div>
         <div class="form-group">
+            <input type="text" [(ngModel)]="selectedEmployee.name" placeholder="Name" class="form-control">
         </div>
         <div class="form-group">
+            <input type="text" [(ngModel)]="selectedEmployee.country" placeholder="Country" class="form-control">
         </div>
-        <button>
-        Submit
+        <button (click)="addOrEdit()" class="btn btn-primary">
+            Submit
+        </button>
+        <button *ngIf="selectedEmployee.id !== 0" class="btn btn-danger ml-1" (click)="delete()">
+            DELETE
         </button>
     </div>
 </div>
