--- a/ciclo-vida-component/src/app/components/changes/changes.component.html
+++ b/ciclo-vida-component/src/app/components/changes/changes.component.html
@@ -1,3 +1,3 @@
 <p>changes works!</p>
 {{input}}
-<input type="text" [(value)]="input" (keypress)="fnEmit($event)">
+<input type="text" [(value)]="input" (keyup)="fnEmit($event)">
