--- a/ciclo-vida-component/src/app/app.component.html
+++ b/ciclo-vida-component/src/app/app.component.html
@@ -7,4 +7,7 @@
   [(input)]="val"
   (out)="changes($event)"
 ></app-changes>
+<a routerLink="route">Router</a>
+<br>
+<a routerLink="/">/</a>
 <router-outlet></router-outlet>
