--- a/Auth0/src/app/components/navbar/navbar.component.html
+++ b/Auth0/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Auth0 App</a>
+    <a class="navbar-brand" [routerLink]="['/gome']" routerLinkActive="active" >Auth0 App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/home']" routerLinkActive="active" >Home <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Precios</a>
+                <a class="nav-link" [routerLink]="['/precios']" routerLinkActive="active" >Precios</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/protegida']" routerLinkActive="active" >Protegida</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
             <button class="btn  btn-outline-success my-2 my-sm-0" type="submit">LogIn</button>
-        </form>
+            <button class="btn  btn-outline-success my-2 my-sm-0" type="submit">LogOut</button>
     </div>
 </nav>
