--- a/Auth0/src/app/components/navbar/navbar.component.html
+++ b/Auth0/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                 <a class="nav-link" [routerLink]="['/protegida']" routerLinkActive="active" >Protegida</a>
             </li>
         </ul>
-            <button class="btn  btn-outline-success my-2 my-sm-0" type="submit">LogIn</button>
-            <button class="btn  btn-outline-success my-2 my-sm-0" type="submit">LogOut</button>
+            <button class="btn  btn-outline-success my-2 my-sm-0" (click)="auth.login()" *ngIf="!auth.loggedIn">Log In</button>
+            <button  class="btn  btn-outline-success my-2 my-sm-0" (click)="auth.logout()" *ngIf="auth.loggedIn">Log Out</button>
     </div>
 </nav>
