--- a/Auth0/src/app/components/navbar/navbar.component.html
+++ b/Auth0/src/app/components/navbar/navbar.component.html
@@ -12,11 +12,11 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/precios']" routerLinkActive="active" >Precios</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/protegida']" routerLinkActive="active" >Protegida</a>
+            <li class="nav-item" *ngIf="auth.loggedIn">
+                <a class="nav-link" [routerLink]="['/protegida']" routerLinkActive="active" *ngIf="auth.loggedIn">Protegida</a>
             </li>
         </ul>
-            <button class="btn  btn-outline-success my-2 my-sm-0" (click)="auth.login()" *ngIf="!auth.loggedIn">Log In</button>
-            <button  class="btn  btn-outline-success my-2 my-sm-0" (click)="auth.logout()" *ngIf="auth.loggedIn">Log Out</button>
+        <button class="btn  btn-outline-success my-2 my-sm-0" (click)="auth.login()" *ngIf="!auth.loggedIn">Log In</button>
+        <button  class="btn  btn-outline-danger my-2 my-sm-0" (click)="auth.logout()" *ngIf="auth.loggedIn">Log Out</button>
     </div>
 </nav>
