--- a/LoginWithFirebase/src/app/components/login/login.component.html
+++ b/LoginWithFirebase/src/app/components/login/login.component.html
@@ -18,12 +18,15 @@
                 </div>
 
                 <div class="flex-sb-m w-full p-t-3 p-b-24">
-                    <div class="contact100-form-checkbox">
+                    <!-- <div class="contact100-form-checkbox">
                         <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                        <!-- <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue"> -->
                         <label class="label-checkbox100" for="ckb1">
                             Recordar mi usuario
                         </label>
+                    </div> -->
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="ckb1" name="remember-me">
+                        <label class="custom-control-label" for="ckb1">Recordar mi usuario</label>
                     </div>
 
                     <div>
@@ -43,3 +46,10 @@
         </div>
     </div>
 </div>
+
+
+<!-- Default checked -->
+<div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="defaultChecked2" checked>
+    <label class="custom-control-label" for="defaultChecked2">Default checked</label>
+  </div>
