--- a/LoginWithFirebase/src/app/components/register/register.component.html
+++ b/LoginWithFirebase/src/app/components/register/register.component.html
@@ -37,12 +37,17 @@
                     </div>
                     
                     <div class="flex-sb-m w-full p-t-3 p-b-24">
-                        <div class="contact100-form-checkbox">
+                        <!-- <div class="contact100-form-checkbox">
                             <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
                             <label class="label-checkbox100" for="ckb1">
                                 Recordar mi usuario
                             </label>
-                        </div>
+                        </div> -->
+
+                        <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="ckb1" name="remember-me">
+                                <label class="custom-control-label" for="ckb1">Recordar mi usuario</label>
+                            </div>
     
                         <div>
                             <a routerLink="/login" class="txt1">
