--- a/LoginWithFirebase/src/app/components/register/register.component.html
+++ b/LoginWithFirebase/src/app/components/register/register.component.html
@@ -1,8 +1,9 @@
 <div class="limiter">
   <div class="container-login100">
     <div class="wrap-login100 p-t-50 p-b-90">
-      <form (ngSubmit)="sendInfo()"
-
+      <form
+      [formGroup]="_formGroup"
+      (ngSubmit)="sendInfo()"
       class="login100-form validate-form flex-sb flex-w">
 
         <span class="login100-form-title p-b-51">
@@ -11,21 +12,34 @@
 
         <!-- <span class="text-danger">El correo es obligatorio</span> -->
         <div class="wrap-input100 m-b-16">
-          <input class="input100" type="text" name="email" placeholder="Email" [(ngModel)]="user.email">
+          <input
+          formControlName="email"
+          class="input100" type="text" name="email" placeholder="Email" [(ngModel)]="user.email">
+
+          <span class="focus-input100"></span>
+        </div>
+        <div class="wrap-input100 m-b-16">
+          <input
+          formControlName="user"
+          class="input100" type="text" name="user" placeholder="Nombre de Usuario">
 
           <span class="focus-input100"></span>
         </div>
 
         <!-- <span class="text-danger">El nombre es obligatorio</span> -->
         <div class="wrap-input100 m-b-16">
-          <input class="input100" type="text" name="nombre" placeholder="Nombre y apellidos">
+          <input
+          formControlName="name"
+          class="input100" type="text" name="nombre" placeholder="Nombre y apellidos">
 
           <span class="focus-input100"></span>
         </div>
 
         <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
         <div class="wrap-input100 m-b-16" data-validate="Password is required">
-          <input class="input100" type="password" name="pass" placeholder="Password">
+          <input
+          formControlName="password"
+          class="input100" type="password" name="pass" placeholder="Password">
           <span class="focus-input100"></span>
         </div>
 
