--- a/LoginWithFirebase/src/app/components/register/register.component.html
+++ b/LoginWithFirebase/src/app/components/register/register.component.html
@@ -3,14 +3,12 @@
     <div class="wrap-login100 p-t-50 p-b-90">
 
       <!--
+        esto es las validaciuones por template
         #form="ngForm"
         (ngSubmit)="sendInfo(form)"
       -->
-      <form
-      [formGroup]="_formGroup"
-      #form="ngForm"
-      (ngSubmit)="sendInfo(_formGroup)"
-      class="login100-form validate-form flex-sb flex-w">
+      <form [formGroup]="_formGroup" #form="ngForm" (ngSubmit)="sendInfo(_formGroup)"
+        class="login100-form validate-form flex-sb flex-w">
 
         <span class="login100-form-title p-b-51">
           Crear nueva cuenta
@@ -18,54 +16,71 @@
 
         <!-- <span class="text-danger">El correo es obligatorio</span> -->
         <div class="wrap-input100 m-b-16">
-          <input
-          formControlName="email"
-          class="input100"
-          type="email"
-          name="email"
-          placeholder="Email"
-          [(ngModel)]="user.email"
-          >
+          <input formControlName="email" class="input100" type="email" name="email" placeholder="Email"
+            [(ngModel)]="user.email">
           <span class="focus-input100"></span>
         </div>
         <div class=""
-            *ngIf="_formGroup.get('email').errors || _formGroup.get('email').dirty || _formGroup.get('email').touched"
-          >
-            <p
-              *ngIf="_formGroup.get('email').hasError('required') && _formGroup.get('email').touched"
-            >
-              El email es necesario
-            </p>
-            <p
-              *ngIf="_formGroup.get('email').hasError('email') && _formGroup.get('email').touched"
-            >
-              El email es incorrecto
-            </p>
-          </div>
+          *ngIf="_formGroup.get('email').errors || _formGroup.get('email').dirty || _formGroup.get('email').touched">
+          <p
+          class="text-danger"
+          *ngIf="_formGroup.get('email').hasError('required') && _formGroup.get('email').touched">
+            El email es necesario
+          </p>
+          <p
+          class="text-danger"
+          *ngIf="(_formGroup.get('email').hasError('email') &&
+                    _formGroup.get('email').touched )           ||
+                    _formGroup.get('email').hasError('pattern')
+              ">
+            El email es incorrecto
+          </p>
+        </div>
         <div class="wrap-input100 m-b-16">
-          <input
-          formControlName="user"
-          class="input100" type="text" name="user" placeholder="Nombre de Usuario">
-
+          <input formControlName="user" class="input100" type="text" name="user" placeholder="Nombre de Usuario">
           <span class="focus-input100"></span>
+        </div>
+        <div class=""
+          *ngIf="_formGroup.get('user').errors || _formGroup.get('user').dirty || _formGroup.get('user').touched">
+          <p
+          class="text-danger"
+          *ngIf="_formGroup.get('user').hasError('required') && _formGroup.get('user').touched">
+            El user es necesario
+          </p>
         </div>
 
         <!-- <span class="text-danger">El nombre es obligatorio</span> -->
         <div class="wrap-input100 m-b-16">
-          <input
-          formControlName="name"
-          class="input100" type="text" name="nombre" placeholder="Nombre y apellidos">
-
+          <input formControlName="name" class="input100" type="text" name="nombre" placeholder="Nombre y apellidos">
           <span class="focus-input100"></span>
+        </div>
+        <div class=""
+          *ngIf="_formGroup.get('name').errors || _formGroup.get('name').dirty || _formGroup.get('name').touched">
+          <p
+          class="text-danger"
+          *ngIf="_formGroup.get('name').hasError('required') && _formGroup.get('name').touched">
+            El user es necesario
+          </p>
         </div>
 
         <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
         <div class="wrap-input100 m-b-16" data-validate="Password is required">
-          <input
-          formControlName="password"
-          class="input100" type="password" name="pass" placeholder="Password">
+          <input formControlName="password" class="input100" type="password" name="pass" placeholder="Password">
           <span class="focus-input100"></span>
         </div>
+        <div class=""
+        *ngIf="_formGroup.get('password').errors || _formGroup.get('password').dirty || _formGroup.get('password').touched">
+        <p
+        class="text-danger"
+        *ngIf="_formGroup.get('password').hasError('required') && _formGroup.get('password').touched">
+          El password es necesario
+        </p>
+        <p
+        class="text-danger"
+        *ngIf="_formGroup.get('password').hasError('minlength')">
+          El password debe tener mas de 6 caracteres
+        </p>
+      </div>
 
         <div class="flex-sb-m w-full p-t-3 p-b-24">
           <!-- <div class="contact100-form-checkbox">
@@ -88,7 +103,7 @@
         </div>
 
         <div class="container-login100-form-btn m-t-17">
-          <button class="login100-form-btn" type="submit">
+          <button [disabled]="_formGroup.invalid" class="login100-form-btn" type="submit">
             Crear cuenta
           </button>
         </div>
