--- a/LoginWithFirebase/src/app/components/register/register.component.html
+++ b/LoginWithFirebase/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="limiter">
+<div class="limiter animated fadeInLeft">
   <div class="container-login100">
     <div class="wrap-login100 p-t-50 p-b-90">
 
@@ -15,38 +15,42 @@
         </span>
 
         <!-- <span class="text-danger">El correo es obligatorio</span> -->
+        <div class=""
+          *ngIf="_formGroup.get('email').errors || _formGroup.get('email').dirty || _formGroup.get('email').touched">
+          <span class="text-danger animated fadeIn"
+            *ngIf="_formGroup.get('email').hasError('required') && _formGroup.get('email').touched">
+            El email es necesario
+          </span>
+          <span class="text-danger animated fadeIn" *ngIf="(_formGroup.get('email').hasError('email') &&
+                  _formGroup.get('email').touched )           ||
+                  _formGroup.get('email').hasError('pattern')
+            ">
+            El email es incorrecto
+          </span>
+        </div>
         <div class="wrap-input100 m-b-16">
           <input formControlName="email" class="input100" type="email" name="email" placeholder="Email"
             [(ngModel)]="user.email">
           <span class="focus-input100"></span>
         </div>
         <div class=""
-          *ngIf="_formGroup.get('email').errors || _formGroup.get('email').dirty || _formGroup.get('email').touched">
-          <p
-          class="text-danger"
-          *ngIf="_formGroup.get('email').hasError('required') && _formGroup.get('email').touched">
-            El email es necesario
-          </p>
-          <p
-          class="text-danger"
-          *ngIf="(_formGroup.get('email').hasError('email') &&
-                    _formGroup.get('email').touched )           ||
-                    _formGroup.get('email').hasError('pattern')
-              ">
-            El email es incorrecto
-          </p>
+          *ngIf="_formGroup.get('user').errors || _formGroup.get('user').dirty || _formGroup.get('user').touched">
+          <span class="text-danger animated fadeIn"
+            *ngIf="_formGroup.get('user').hasError('required') && _formGroup.get('user').touched">
+            El user es necesario
+          </span>
         </div>
         <div class="wrap-input100 m-b-16">
           <input formControlName="user" class="input100" type="text" name="user" placeholder="Nombre de Usuario">
           <span class="focus-input100"></span>
         </div>
+
         <div class=""
-          *ngIf="_formGroup.get('user').errors || _formGroup.get('user').dirty || _formGroup.get('user').touched">
-          <p
-          class="text-danger"
-          *ngIf="_formGroup.get('user').hasError('required') && _formGroup.get('user').touched">
-            El user es necesario
-          </p>
+          *ngIf="_formGroup.get('name').errors || _formGroup.get('name').dirty || _formGroup.get('name').touched">
+          <span class="text-danger animated fadeIn"
+            *ngIf="_formGroup.get('name').hasError('required') && _formGroup.get('name').touched">
+            El name es necesario
+          </span>
         </div>
 
         <!-- <span class="text-danger">El nombre es obligatorio</span> -->
@@ -55,32 +59,21 @@
           <span class="focus-input100"></span>
         </div>
         <div class=""
-          *ngIf="_formGroup.get('name').errors || _formGroup.get('name').dirty || _formGroup.get('name').touched">
-          <p
-          class="text-danger"
-          *ngIf="_formGroup.get('name').hasError('required') && _formGroup.get('name').touched">
-            El user es necesario
-          </p>
+          *ngIf="_formGroup.get('password').errors || _formGroup.get('password').dirty || _formGroup.get('password').touched">
+          <span class="text-danger animated fadeIn"
+            *ngIf="_formGroup.get('password').hasError('required') && _formGroup.get('password').touched">
+            El password es necesario
+          </span>
+          <span class="text-danger animated fadeIn" *ngIf="_formGroup.get('password').hasError('minlength')">
+            El password debe tener mas de 6 caracteres
+          </span>
         </div>
-
         <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
         <div class="wrap-input100 m-b-16" data-validate="Password is required">
           <input formControlName="password" class="input100" type="password" name="pass" placeholder="Password">
           <span class="focus-input100"></span>
         </div>
-        <div class=""
-        *ngIf="_formGroup.get('password').errors || _formGroup.get('password').dirty || _formGroup.get('password').touched">
-        <p
-        class="text-danger"
-        *ngIf="_formGroup.get('password').hasError('required') && _formGroup.get('password').touched">
-          El password es necesario
-        </p>
-        <p
-        class="text-danger"
-        *ngIf="_formGroup.get('password').hasError('minlength')">
-          El password debe tener mas de 6 caracteres
-        </p>
-      </div>
+
 
         <div class="flex-sb-m w-full p-t-3 p-b-24">
           <!-- <div class="contact100-form-checkbox">
