--- a/LoginWithFirebase/src/app/components/home/home.component.html
+++ b/LoginWithFirebase/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="m-5">
+  <h1>Aplicacion secreta</h1>
+  <button class="btn btn-outline-danger"
+          (click)="logOut()">
+    LogOut
+  </button>
+</div>
