--- a/LoginWithFirebase/src/app/components/register/register.component.html
+++ b/LoginWithFirebase/src/app/components/register/register.component.html
@@ -84,7 +84,10 @@
                         </div> -->
 
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="ckb1" name="remember-me">
+            <input type="checkbox" class="custom-control-input" id="ckb1" name="remember-me"
+              (click)="rememberMe=!rememberMe"
+              [checked]="rememberMe"
+            >
             <label class="custom-control-label" for="ckb1">Recordar mi usuario</label>
           </div>
 
