--- a/LoginWithFirebase/src/app/components/register/register.component.html
+++ b/LoginWithFirebase/src/app/components/register/register.component.html
@@ -85,7 +85,7 @@
 
           <div class="custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" id="ckb1" name="remember-me"
-              (click)="rememberMe=!rememberMe"
+              (change)="rememberMe=!rememberMe"
               [checked]="rememberMe"
             >
             <label class="custom-control-label" for="ckb1">Recordar mi usuario</label>
