--- a/reactive-form/src/app/components/data/data.component.html
+++ b/reactive-form/src/app/components/data/data.component.html
@@ -1,1 +1,29 @@
-<p>data works!</p>
+<div class="mt-2 ml-5">
+    <h4>Formularios <small>{{title}}</small></h4>
+    <form action="">
+      <div class="form-group row">
+        <label for="" class="col-2 col-form-label">Nombre</label>
+        <div class="col-8">
+          <input type="text" class="form-control" placeholder="Nombre">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="" class="col-2 col-form-label">Apellido</label>
+        <div class="col-8">
+          <input type="text" class="form-control" placeholder="Apellido">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="" class="col-2 col-form-label">Correo</label>
+        <div class="col-md-8">
+          <input type="email" class="form-control" placeholder="Correo">
+        </div>
+      </div>
+      <div class="form-group row">
+          <label for="" class="col-2 col-form-label">&nbsp;</label>
+          <div class="col-md-8 input-group">
+            <button type="submit" class="btn btn-outline-primary"> Guardar</button>
+          </div>
+        </div>
+    </form>
+  </div>
