--- a/reactive-form/src/app/components/template/template.component.html
+++ b/reactive-form/src/app/components/template/template.component.html
@@ -1,1 +1,72 @@
-<p>template works!</p>
+<div class="mt-2 ml-5">
+  <h4>Formularios <small>{{title}}</small></h4>
+  <form
+    #form="ngForm"
+    (ngSubmit)="submit(form)"
+    action="" novalidate>
+    <div class="form-group row">
+      <label for="" class="col-2 col-form-label">Nombre</label>
+      <div class="col-8">
+        <input type="text" class="form-control" placeholder="Nombre"
+        name="nombre"
+        ngModel
+        minlength="5"
+        required
+        #nombre="ngModel"
+        >
+
+        <div class="" *ngIf="(nombre.errors?.required && nombre.touched )">
+            Este campo es requerido
+        </div>
+        <div class="" *ngIf="nombre.errors?.minlength">
+          Este campo requiere por lo menos {{nombre.errors.minlength.requiredLength}} caracteres
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="" class="col-2 col-form-label">Apellido</label>
+      <div class="col-8">
+        <input type="text" class="form-control" placeholder="Apellido"
+        name="apellido"
+        ngModel
+        minlength="5"
+        required
+        #apellido="ngModel"
+        >
+
+        <div class="" *ngIf="apellido.errors?.required && apellido.touched">
+          Este campo es requerido
+        </div>
+        <div class="" *ngIf="apellido.errors?.minlength">
+          Este campo requiere por lo menos {{apellido.errors.minlength.requiredLength}} caracteres
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="" class="col-2 col-form-label">Correo</label>
+      <div class="col-8">
+        <input type="email" class="form-control" placeholder="Correo"
+        name="email"
+        ngModel
+        pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+        required
+        #email="ngModel"
+        >
+        <div class="" *ngIf="email.errors?.required && email.touched">
+            Este campo es requerido
+        </div>
+        <div class="" *ngIf="nombre.errors?.pattern">
+          El formato indicato es incorrecto
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+        <label for="" class="col-2 col-form-label">&nbsp;</label>
+        <div class="col-md-8 input-group">
+          <button type="submit" class="btn btn-outline-primary"
+            [disabled]="!form.valid"
+          > Guardar</button>
+        </div>
+      </div>
+  </form>
+</div>
