--- a/reactive-form/src/app/components/template/template.component.html
+++ b/reactive-form/src/app/components/template/template.component.html
@@ -3,8 +3,11 @@
   <form
     #form="ngForm"
     (ngSubmit)="submit(form)"
-    action="" novalidate>
-    <div class="form-group row">
+    action="" novalidate
+    autocomplete="off"
+    [ngClass]="{'was-validated': form.valid}"
+    >
+    <div class="form-group row has-danger">
       <label for="" class="col-2 col-form-label">Nombre</label>
       <div class="col-8">
         <input type="text" class="form-control" placeholder="Nombre"
@@ -13,12 +16,13 @@
         minlength="5"
         required
         #nombre="ngModel"
+        [ngClass]="{'is-valid':!nombre.errors}"
         >
 
-        <div class="" *ngIf="(nombre.errors?.required && nombre.touched )">
+        <div class="text-danger animated fadeIn form-control-feedback" *ngIf="(nombre.errors?.required && nombre.touched )">
             Este campo es requerido
         </div>
-        <div class="" *ngIf="nombre.errors?.minlength">
+        <div class="text-danger animated fadeIn form-control-feedback" *ngIf="nombre.errors?.minlength">
           Este campo requiere por lo menos {{nombre.errors.minlength.requiredLength}} caracteres
         </div>
       </div>
@@ -32,12 +36,13 @@
         minlength="5"
         required
         #apellido="ngModel"
+        [ngClass]="{'is-valid animated fadeIn':!apellido.errors}"
         >
 
-        <div class="" *ngIf="apellido.errors?.required && apellido.touched">
+        <div class="text-danger animated fadeIn form-control-feedback" *ngIf="apellido.errors?.required && apellido.touched">
           Este campo es requerido
         </div>
-        <div class="" *ngIf="apellido.errors?.minlength">
+        <div class="text-danger animated fadeIn form-control-feedback" *ngIf="apellido.errors?.minlength">
           Este campo requiere por lo menos {{apellido.errors.minlength.requiredLength}} caracteres
         </div>
       </div>
@@ -51,22 +56,57 @@
         pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
         required
         #email="ngModel"
+        [ngClass]="{'is-valid':!email.errors}"
         >
-        <div class="" *ngIf="email.errors?.required && email.touched">
+        <div class="text-danger animated fadeIn form-control-feedback" *ngIf="email.errors?.required && email.touched">
             Este campo es requerido
         </div>
-        <div class="" *ngIf="nombre.errors?.pattern">
-          El formato indicato es incorrecto
+        <div class="text-danger animated fadeIn form-control-feedback" *ngIf="email.errors?.pattern">
+          El formato indicado es incorrecto
         </div>
       </div>
     </div>
+
+    <div class="form-group row">
+        <label for="" class="col-2 col-form-label">Pais</label>
+        <div class="col-8">
+          <select
+          [(ngModel)]="paisDefault"
+          name="pais" id="" class="form-control custom-select" required
+          >
+          <option value=""  disabled selected >Seleccione un  pais</option>
+          <option *ngFor="let pais of paises" [value]="pais.codigo" >
+            {{pais.pais}}
+          </option>
+        </select>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label for="" class="col-2 col-form-label">Sexo</label>
+        <div class="col-8">
+
+            <div class="custom-control custom-radio" *ngFor="let s of sexos">
+                <input type="radio" [id]="s" name="sexo" class="custom-control-input" [value]="s" [(ngModel)]="sexoDefault">
+                <label class="custom-control-label" [for]="s">{{s}}</label>
+              </div>
+              <!-- <div class="custom-control custom-radio">
+                <input type="radio" id="customRadio2" name="sexo" class="custom-control-input" value="Femenino" [(ngModel)]="sexoDefault">
+                <label class="custom-control-label" for="customRadio2">Femenino</label>
+              </div> -->
+        </div></div>
+
+
     <div class="form-group row">
         <label for="" class="col-2 col-form-label">&nbsp;</label>
         <div class="col-md-8 input-group">
           <button type="submit" class="btn btn-outline-primary"
-            [disabled]="!form.valid"
+          [disabled]="!form.valid"
           > Guardar</button>
         </div>
       </div>
   </form>
 </div>
+
+<pre *ngIf="data">
+  {{ data | json }}
+</pre>
