--- a/reactive-form/src/app/components/template/template.component.html
+++ b/reactive-form/src/app/components/template/template.component.html
@@ -94,8 +94,18 @@
                 <label class="custom-control-label" for="customRadio2">Femenino</label>
               </div> -->
         </div></div>
-
-
+        <div class="form-group row">
+            <label for="" class="col-2 col-form-label">Acepta</label>
+            <div class="col-8">
+        <div class="custom-control custom-checkbox">
+            <input type="checkbox" class="custom-control-input" id="customCheck1" required
+            name="acepta"
+            ngModel
+            #acepta="ngModel"
+            >
+            <label class="custom-control-label" for="customCheck1">Acepta terminos y condiciones</label>
+          </div>
+        </div></div>
     <div class="form-group row">
         <label for="" class="col-2 col-form-label">&nbsp;</label>
         <div class="col-md-8 input-group">
