--- a/reactive-form/src/app/components/data/data.component.html
+++ b/reactive-form/src/app/components/data/data.component.html
@@ -61,6 +61,20 @@
             ">
             El email es incorrecto
           </span>
+
+
+          <span *ngIf="_formGroup.get('email').status === 'PENDING'">
+              <div class="animated fadeIn">
+                <i class="fa fa-sync-alt fa-1x fa-spin"></i> Checking ...
+              </div>
+            </span>
+            <!-- <span *ngIf="_formGroup.get('email').status === 'VALID'">
+              😺 Email is available!
+            </span> -->
+            <span *ngIf="_formGroup.get('email').errors && _formGroup.get('email').errors?.emailTaken">
+              😢 El email ya existe
+            </span>
+
         </div>
 
       <div class="form-group row">
@@ -114,6 +128,19 @@
           <span class="text-danger animated fadeIn" *ngIf="_formGroup.get('username').hasError('minlength')">
             El username debe tener mas de 6 caracteres
           </span>
+
+          <span *ngIf="_formGroup.get('username').status === 'PENDING'">
+              <div class="animated fadeIn">
+                <i class="fa fa-sync-alt fa-1x fa-spin"></i> Checking ...
+              </div>
+            </span>
+            <!-- <span *ngIf="_formGroup.get('email').status === 'VALID'">
+              😺 Email is available!
+            </span> -->
+            <span *ngIf="_formGroup.get('username').errors && _formGroup.get('username').errors?.usernameTaken">
+              😢 El username ya existe
+            </span>
+
         </div>
 
 
